more tests fixed